--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "lucide-react": "^0.541.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
